--- a/views/index.ejs
+++ b/views/index.ejs
@@ -309,7 +309,7 @@
         }
     </style>
 
-    <script type="module" src="/js/projects/mostrarProjeto.js"></script>
+    <script type="module" src="../public/js/projects/mostrarProjeto.js"></script>
     <script type="module" src="/js/projects/modalsProjects.js"></script>
     <script type="module" src="/js/projects/comentarioProjeto.js"></script>
     <script type="module" src="/js/projects/curtirProjeto.js"></script>
